Fixes compatibility issues